[gd_scene load_steps=3 format=2]

[ext_resource path="res://Actors/Towers/player-blue-square.svg" type="Texture" id=1]
[ext_resource path="res://Interface/TowerPurchaseInterface/TowerPurchaseButton.gd" type="Script" id=2]

[node name="TowerPurchaseButton" type="TextureButton"]
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 0
size_flags_vertical = 2
action_mode = 0
texture_normal = ExtResource( 1 )
stretch_mode = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
